# GitblitMCPServer

./: .env.example  AGENTS.md  Dockerfile  Jenkinsfile  README.md  pyproject.toml  run.py
.claude/agents/: code-reviewer.md  code-writer.md  plan-writer.md
.llmbox/: docker-compose.yml
docs/: mcp_api.md  mcp_changes.md  mvp_scope.md  plan_execution_workflow.md  product_brief.md  search_plugin_api.md  search_plugin_plan.md  sourcegraph_mcp_tools.md  sourcegrid_mcp_docs.md
docs/commands/: review_plan.md
docs/features/find_files/: plugin_change_brief.md  server_change_brief.md
docs/features/mcp_server_mvp/: change_brief.md  code_review.md  plan.md  plan_execution_report.md  plan_review.md  requirements_verification.md
docs/features/pagination/: plugin_change_brief.md  server_change_brief.md
docs/features/search_improvements/: plugin_change_brief.md  server_change_brief.md
scripts/: args.sh
src/gitblit_mcp_server/: __init__.py  __main__.py  client.py  config.py  repo_validator.py  schemas.py  server.py
src/gitblit_mcp_server/tools/: __init__.py  commit_search.py  file_search.py  find_files.py  list_files.py  list_repos.py  read_file.py
tests/: .env.test  conftest.py  test_client_unit.py  test_commit_search.py  test_config.py  test_file_search.py  test_find_files.py  test_list_files.py  test_list_repos.py  test_mcp_integration.py  test_mcp_tools_unit.py  test_path_pattern.py  test_read_file.py  test_repo_validator.py  test_repo_validator_realworld.py
tests/fixtures/: repository_names.json
